# dbt_northwind_aovivo

./: README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: clients_to_marketing.sql  receitas_acumuladas.sql  top_10_products.sql  total_revenues_1997_view.sql  uk_clients_who_pay_more_then_1000.sql  vendas.sql  view_total_revenues_per_customer_group.sql
northwind/models/raw/crm/: raw_crm__nova_tabela.sql  raw_crm__order_details.sql  raw_crm__orders.sql
northwind/models/staging/crm/: stg_crm__customer.sql  stg_crm__nova_tabela.sql  stg_crm__products.sql  stg_crm_order_details.sql  stg_crm_orders.sql
northwind/seeds/: nova_tabela.csv  region_2.csv  region_3.csv
